feat: show dividend income details per each quarter